--- a/dxly/gwmfx.htm
+++ b/dxly/gwmfx.htm
@@ -83,7 +83,7 @@ QQ：50914333</font><br><br>
 <span lang="en-us">&nbsp;</span>支付宝：13952819473</p>
 <p>
 <span style="color: rgb(0, 0, 0); font-family: &quot;Microsoft YaHei&quot;; font-size: medium; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">
-汇款账号：工行卡号 6212 2611 0400 1895 704 葛亦民 开户行：江苏镇江南大街支行</span></p>
+汇款账号：邮政卡号 6221883140001998345 葛亦民 开户行：江苏镇江市梦溪路支行</span></p>
 <p>
 <br>
 
