--- a/rj/eswj.htm
+++ b/rj/eswj.htm
@@ -187,15 +187,16 @@ img.userlink-avatar-small{margin-left:0.2em;margin-right:0.2em;width:1.5em;borde
 <li><b>圣诞节</b>：1969年1月31日（农历戊申年腊月十四）</li>
 <li><b>神仙QQ</b>
 <li>50914333</li></ul></li>
-<li><b>神经交流群</b>：75081524</li>
+<li><b>神经QQ交流群</b>：695836804</li>
 <li><b>神仙热线</b>
 <ul><li>13952819473</li>
 <li><b>神仙信箱</b>
 <ul><li>sejeme@163.com</li>
 <li>50914333@qq.com</li></ul></li>
 <li><b>福音微信公众平台</b>：
-<ul><li>godjiao</li>
-<li>geyimin1969</li></ul></li>
+ 
+<ul>
+				<li>葛亦民异闻录</li></ul>
 <li><b>在这里与神仙面对面</b>
 <ul>
 <li>微视：geyimin</li>
@@ -208,7 +209,7 @@ img.userlink-avatar-small{margin-left:0.2em;margin-right:0.2em;width:1.5em;borde
 <ul><li>
 <p>
 <span style="color: rgb(0, 0, 0); font-family: &quot;Microsoft YaHei&quot;; font-size: medium; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">
-工行卡号 6212 2611 0400 1895 704 葛亦民 开户行：江苏镇江南大街支行</span></p>
+邮政卡号 6221883140001998345 葛亦民 开户行：江苏镇江市梦溪路支行</span></p>
 	</li></ul></li>
 <li>微信支付：13952819473</li>
 <li>支付宝：13952819473</li></ul></li></ul>
@@ -244,7 +245,7 @@ img.userlink-avatar-small{margin-left:0.2em;margin-right:0.2em;width:1.5em;borde
 <ul><li>顶贴狗，你妈炸了。</li>
 <li>操你妈。</li></ul>
 <h2><span id="俺上电视了"></span><span class="mw-headline" id=".E4.BF.BA.E4.B8.8A.E7.94.B5.E8.A7.86.E4.BA.86">俺上电视了</span></h2>
-<p>2019年1月22日，有高雅人士以“基督教信徒”葛亦民的名义，真可谓是应验了龚诗锋的预言“有你有我，俺上电视了”。
+<p>2019年1月22日，有高雅人士以“基督教信徒”葛亦民的名义<span lang="zh-cn">， XTR电视台TD</span>，真可谓是应验了龚诗锋的预言“有你有我，俺上电视了”。
 </p><p>&nbsp;</p>
 <h2><span class="mw-headline" id=".E7.99.BE.E7.A7.91">百科</span></h2>
 <p>本段内容来自百度百科（已被橄榄）
@@ -325,7 +326,7 @@ img.userlink-avatar-small{margin-left:0.2em;margin-right:0.2em;width:1.5em;borde
 <h2><span id="神仙在线"></span><span class="mw-headline" id=".E7.A5.9E.E4.BB.99.E5.9C.A8.E7.BA.BF">神仙在线</span></h2>
 <ul><li><a rel="nofollow" class="external text" href="http://www.gegod.com/lj.html" target="_blank"target="_blank">神教网址导航</a></li>
 <li><a rel="nofollow" class="external text" href="http://www.gegod.com" target="_blank">葛神网</a></li>
-<li><a rel="nofollow" class="external text" href="http://www.20331126.xyz" target="_blank">紫薇圣人网</a></li>
+<li><a rel="nofollow" class="external text" href="http://www.20331126.xyz" target="_blank">大同世界网</a></li>
 </ul>
 <h2><span id="注释"></span><span class="mw-headline" id=".E6.B3.A8.E9.87.8A">注释</span></h2>
 <div class="mw-references-wrap"><ol class="references">
