--- a/wx.html
+++ b/wx.html
@@ -84,7 +84,7 @@
 		
 	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;<font size="5">
 	<b> <A href="word.html" target="_blank">神经</A>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <A href="god.html" target="_blank">葛神异闻录</A></b></font>
-	<p><a href="god.html" target="_blank"><img src="dxrj/gsywl.jpg"WIDTH=130 HEIGHT=200></a></p>
+	<p><a href="god.html" target="_blank"><img src="pic/gsywl.jpg"WIDTH=130 HEIGHT=200></a></p>
 
 <br><br><br>
 	<p>
@@ -408,7 +408,8 @@
 									<br>
 									每个人都如此，每件事都如此。<p>　</p>
 		<p>　</p>
-		<p>　</p><script>
+		<p><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <A href="lj.html" target="_blank"><font size="5" color="#800000">神教所有网站</font></A>  
+  <p>　</p><script>
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
