--- a/god.html
+++ b/god.html
@@ -11,7 +11,8 @@
 
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <font size="6" color="#800080">葛神异闻录</font></p>
-	<p><a href="god.html" target="_blank"><img src="dxrj/sjgsywlx.jpg"></a><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="index.html" target="_blank"><font size="6">神网</font></A>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="6">&nbsp;</font><A href="word.html" target="_blank"><font size="6">神经</font></A>&nbsp;</b> </p>
+	<p><a href="god.html" target="_blank">
+	<img src="pic/gsywl.jpg" width="300" height="474"></a><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="index.html" target="_blank"><font size="6">神网</font></A>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font size="6">&nbsp;</font><A href="word.html" target="_blank"><font size="6">神经</font></A>&nbsp;</b> </p>
 <p><br>
 一、
 第1卷&nbsp;&nbsp;&nbsp; 葛神异闻录之纯真年代（1969年1月–1990年7月）</p>
@@ -91,6 +92,7 @@
 <A href="dxly/fyfry15.htm" target="_blank">第十五章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry16.htm" target="_blank">第十六章</A>&nbsp;&nbsp;&nbsp;
 <A href="dxly/fyfry17.htm" target="_blank">第十七章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry18.htm" target="_blank">第十八章</A>&nbsp;&nbsp;&nbsp;
 <A href="dxly/fyfry19.htm" target="_blank">第十九章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/fyfry20.htm" target="_blank">第二十章</A>&nbsp;&nbsp;&nbsp;
+<p>&nbsp; &nbsp;&nbsp; <A href="dxly/fyfry21.htm" target="_blank">第二十一章</A>&nbsp;&nbsp;&nbsp;
 
 
 
@@ -153,7 +155,8 @@
 <p>&nbsp; &nbsp;&nbsp;<A href="dxly/cs31.htm" target="_blank">第三十一章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs32.htm" target="_blank">第三十二章</A>&nbsp;&nbsp;&nbsp;
 <A href="dxly/cs33.htm" target="_blank">第三十三章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs34.htm" target="_blank">第三十四章</A>&nbsp;&nbsp;&nbsp;
 <A href="dxly/cs35.htm" target="_blank">第三十五章</A>&nbsp;&nbsp;&nbsp;<A href="dxly/cs36.htm" target="_blank">第三十六章</A>&nbsp;&nbsp;&nbsp;
-<A href="dxly/cs37.htm" target="_blank">第三十七章</A>&nbsp;&nbsp;&nbsp;
+<A href="dxly/cs37.htm" target="_blank">第三十七章</A>&nbsp;&nbsp;&nbsp; &nbsp;<A href="dxly/cs38.htm" target="_blank">第三十八章</A>&nbsp;&nbsp;&nbsp;
+
 
 
 
