--- a/lj.html
+++ b/lj.html
@@ -6,6 +6,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />  
 
 
+<style type="text/css">
+.style1 {
+				font-size: medium;
+				font-weight: bold;
+}
+.style2 {
+				font-size: medium;
+}
+</style>
+
+
 </head>
 
 <body>
@@ -15,24 +26,26 @@
 	<b>&nbsp;</b></font><b><font size="5">神教所有网站</font></b><p><br><br>
 	
 
-<font color="#800000">	<b><font size="4">航空母舰：&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></b></font><font size="4">&nbsp;<b><a target="_blank"href="http://www.gegod.com">神网</a></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; <b><a target="_blank" href="http://www.gegod.com/bbs">神社区</a></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 
+<font color="#800000">	<b><font size="4">航空母舰：&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></b></font><font size="4">&nbsp;<b><a target="_blank"href="http://www.gegod.com">神网</a></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; <b><a target="_blank" href="http://www.gegod.com/bbs">神社区</a></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 
 	<b><a target="_blank" href="http://www.gegod.com/club">神论坛</a></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 &nbsp;
-	<a target="_blank" href="http://www.20331126.xyz">大同世界网</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <b><a target="_blank" href="http://www.20331126.xyz/bbs">大同世界社区</a>
-	&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;<font color="#800000">  <b>  <a target="_blank" href="http://www.gegod.com/nszz/gymsp.htm">葛亦民视频赞美歌</a></b>&nbsp;  
+	<a target="_blank" href="http://www.20331126.xyz">紫薇圣人网</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;</font><span class="style2">
+	</span><a target="_blank" href="http://www.20331126.xyz/bbs">
+	<span class="style2">紫薇圣人社区</span></a><font size="4"><b>
+	&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;<font color="#800000">  <b>  <a target="_blank" href="nszz/gymsp.htm">葛亦民视频赞美歌</a></b>&nbsp;  
 
-	</font> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>  <a target="_blank" href="http://www.gegod.com/book/">留言本</a></b>
+	</font> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>  </b>
+	</b> </font>
+	<a target="_blank" href="http://www.gegod.com/book/"><span class="style2">留言本</span></a><font size="4"><b>
 	</b> </font>
 <p>
 	<font size="4">
 	<b>
 	<br>
-	<font color="#800000">旗舰：&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;  
-	</font> </b>
-	</font><font size="4" color="#800000">&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank" href="http://www.kaila.com.cn/">神网</a>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;<a target="_blank" href="http://www.kaila.com.cn/bbs">大同世界社区</a>&nbsp;&nbsp; &nbsp;&nbsp;
+	<font color="#800000">旗舰：&nbsp;&nbsp;&nbsp;</font></b></font><font size="4" color="#800000">&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank" href="http://www.wjxw-lib.net/">神网</a> &nbsp; &nbsp;&nbsp; <a target="_blank" href="http://www.wjxw-lib.net/bbs">葛亦民社区</a> &nbsp; &nbsp;&nbsp;
 	
 	<a target="_blank" href="http://blog.gegod.com/bbs">神论坛</a> &nbsp; &nbsp;&nbsp; <a target="_blank" href="http://bbs.gegod.com/bbs">葛亦民社区</a>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
-	 <a target="_blank" href="http://hao.20331126.xyz/bbs">美国论坛</a>&nbsp;&nbsp; &nbsp; &nbsp;<a target="_blank" href="http://group.gegod.com/bbs">神社区</a>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
+	 <a target="_blank" href="http://hao.20331126.xyz/bbs">美国论坛</a>&nbsp;&nbsp; &nbsp; &nbsp;<a target="_blank" href="http://bbs.20331126.xyz/bbs">神社区</a>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
 <a target="_blank" href="https://geyimin.longluntan.com/">龙论坛</a>&nbsp; &nbsp;
 	&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://www.sinovision.net/?591176">美国中文网</a>&nbsp; &nbsp;
 	&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://home.20331126.xyz">yooco论坛</a>&nbsp; &nbsp;
@@ -45,60 +58,79 @@
 	<span lang="en-us">
 	<font size="4">
 	&nbsp;&nbsp;<br><br><p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;<font size="4">
-	<br><font color="#800000"><strong>驱逐舰</strong>：&nbsp;&nbsp; &nbsp; &nbsp; </font>  <a target="_blank" href="http://www.wjxw-lib.net/">神网</a> &nbsp; &nbsp;&nbsp; <a target="_blank" href="http://www.wjxw-lib.net/bbs">葛亦民社区</a> &nbsp; &nbsp;&nbsp;
-		<a target="_blank" href="https://www.zhihu.com/people/de-yang-li-juan">知乎</a>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; <a target="_blank" href="https://weibo.com/g20331126">微博</a>&nbsp; &nbsp;&nbsp;
-	
-	<a target="_blank" href="http://geyimin.anyplace.cn/">建个站</a>&nbsp; &nbsp;&nbsp; &nbsp;<a target="_blank" href="http://www.geyimin.space/bbs">紫薇圣人社区</a>
-	&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; <a target="_blank" href="http://us.gegod.com/bbs">神社区</a>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
+	<br><font color="#800000">驱逐舰：&nbsp;&nbsp; &nbsp; &nbsp; </font> 
+		<a target="_blank" href="https://www.zhihu.com/column/c_1609612823952068609">知乎专栏</a>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; 
+	<a target="_blank" href="http://my.gegod.com/bbs">大同世界社区</a>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
+<a target="_blank" href="http://www.geyimin.space/bbs">紫薇圣人社区</a>
+	&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; 
+<a target="_blank" href="http://us.gegod.com/bbs">神社区</a>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
 
-<a target="_blank" href="http://hao.gegod.com/bbs">葛亦民社区</a>&nbsp;&nbsp;&nbsp;&nbsp;<span lang="zh-cn">&nbsp;
-</span>&nbsp;
+<a target="_blank" href="http://hao.gegod.com/bbs">葛亦民社区</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a target="_blank" href="http://yimin.20331126.xyz/bbs/">基共社区</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 
  <a target="_blank" href="http://sb.20331126.xyz">投票</a>&nbsp; &nbsp;
 </font>
 
-	<b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="http://www.gegod.com/word.html" target="_blank">神经</A>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="http://www.gegod.com/god.html" target="_blank">葛神异闻录</A>
+	<b>&nbsp;&nbsp;&nbsp;&nbsp;</b>&nbsp;<A href="http://www.gegod.com/word.html" target="_blank">神经</A>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<A href="http://www.gegod.com/god.html" target="_blank">葛神异闻录</A><b>
 		
 <p> 
-<br>&nbsp;<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;微信公众号：<font size="4">葛亦民异闻录&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font><span lang="en-us"><font size="4"><b> 
-QQ群:&nbsp;&nbsp;695836804&nbsp; </b>
+<br>&nbsp;<br>&nbsp; &nbsp;2个微信公众号：<font size="4">geyimin2033&nbsp;&nbsp;&nbsp;&nbsp;xyz20331126&nbsp;&nbsp;
+		&nbsp;&nbsp;&nbsp;&nbsp;</font><span lang="en-us"><font size="4"><b>
+<span lang="zh-cn">2个</span>QQ群:&nbsp;&nbsp;695836804&nbsp; </b>
 	
-	</font></span><font size="4">&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 微视号：geyimin&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </font>
+	</font></span><font size="4">&nbsp;<span lang="zh-cn"> </span>&nbsp;686558572 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 微视号：geyimin&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font><p> 
+&nbsp;</b><p> 
+&nbsp;&nbsp;<font size="4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	
-	<a target="_blank" a href="http://www.gegod.com/video/">神网视频库</a>
-&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/picture/">神网图片库</a><br>
+	<span lang="en-us">
+	&nbsp;</span></font>
+<a target="_blank" href="http://min.20331126.xyz">法国论坛</a>&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
+<a target="_blank" href="http://fanghuatown.top/bbs">神社区</a>&nbsp;&nbsp; &nbsp; &nbsp;<span lang="zh-cn">&nbsp;&nbsp;
+</span><a target="_blank" href="http://group.gegod.com/bbs">神社区</a>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+<a target="_blank" href="http://geyimin.gegod.com/bbs">神论坛</a>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+
+	
+	
+<a target="_blank" href="http://us.20331126.xyz/bbs">神社区</a>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; 
+<a target="_blank" href="http://gegod.xyz/">wordpress</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+ <a target="_blank" href="http://post.20331126.xyz">flarum论坛</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank" href="http://wp.20331126.xyz">000社区</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+<a target="_blank"href="https://geyimin.edublogs.org/">edublogs博客</a>&nbsp;&nbsp;&nbsp; &nbsp;
+
+<span lang="en-us"><a target="_blank"href="https://ge.gegod.com">神网</a>
+	<br>
 	<p>
 <br>
-	 <br><font color="#800000">护卫舰：&nbsp;&nbsp; &nbsp; &nbsp; </font> </b>
+	 <br><font color="#800000">护卫舰：&nbsp;&nbsp; &nbsp; &nbsp; </font> 
 	
-	&nbsp;<font size="4"><a target="_blank" href="http://geyimin.eu.org/bbs">神论坛</a>&nbsp;&nbsp;&nbsp; 
-<span lang="zh-cn">&nbsp;</span>&nbsp;<a target="_blank" href="http://god.gegod.com/bbs">god社区</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	&nbsp;
+<a target="_blank" href="http://god.gegod.com/bbs">god社区</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 
-    <a target="_blank" href="http://home.gegod.com/bbs/">神社区</a>&nbsp;&nbsp; &nbsp;
- 
+    
 	  <a target="_blank" href="http://cn.gegod.com/bbs">日本论坛</a>&nbsp;&nbsp;&nbsp; &nbsp;
 <a target="_blank" href="http://post.gegod.com/bbs">大同世界社区</a> &nbsp;&nbsp;&nbsp; &nbsp;<a target="_blank" href="http://sb.gegod.com/bbs">葛亦民社区</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="http://my.20331126.xyz/bbs">葛亦民社区</a>
 	&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
-<a target="_blank" href="http://web.20331126.xyz/bbs">紫微圣人社区</a>&nbsp;&nbsp; &nbsp;&nbsp;<a target="_blank"href="http://www.gegod.eu.org">神网</a>
-	
+<a target="_blank" href="http://web.20331126.xyz/bbs">紫微圣人社区</a>&nbsp;&nbsp; &nbsp;&nbsp;<a target="_blank" href="http://geyimin.20331126.xyz/bbs">神社区</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+	<a target="_blank" href="http://cn.20331126.xyz/bbs">神社区</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+
 
 		
 	<br><br><br>
 
 	
 
-	<b><font color="#800000"> 补给舰：</font></b>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
+	<font color="#800000"> 补给舰：</font>&nbsp;&nbsp;&nbsp;&nbsp; 
 
-<a target="_blank" href="http://bbs.gegod.eu.org">德国论坛</a>&nbsp;&nbsp; &nbsp;&nbsp;
-&nbsp;&nbsp;&nbsp;
-	
-	 <a target="_blank" href="http://geyimin.gegod.com/bbs">神社区</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
- <a target="_blank" href="http://geyimin.258club.com/">Sclub论坛</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  <a target="_blank"href="http://geyimin.forumzh.com/">葛亦民论坛</a>&nbsp;&nbsp;&nbsp; &nbsp;
- <a target="_blank"href="https://60a0ff933604a.site123.me/">神社区</a>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
- <a target="_blank" href="http://t.gegod.com">github博客</a>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank"href="http://www.geyimin.gay">葛亦民网</a>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank"href="http://web.gegod.com">神网</a><span class="style3">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b> <a href="http://www.gegod.com/dxly/gwmfx.htm" target="_blank">功德箱</a></b></span>
+ <a target="_blank" href="http://t.gegod.com">github博客</a>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank"href="http://www.geyimin.gay">葛亦民同志</a><span class="style3">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+ <span lang="en-us"><a target="_blank" a href="http://www.gegod.com/picture/">神网图片库</a>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
+<b> <a href="https://v.gegod.xyz/index.html" target="_blank">blaze视频库</a></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<b> <a href="http://v.20331126.xyz" target="_blank">甲骨文视频库</a></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+ </span></font>
+ <span lang="en-us">
+ <a href="http://www.gegod.com/dxly/gwmfx.htm" target="_blank">
+<span class="style1">功德箱</span></a></span><font size="4"><b>
 <br><br><br>
 
 		
