--- a/xw.html
+++ b/xw.html
@@ -131,8 +131,7 @@
 <p>8、<p><img src="pic/wb.jpg"><img src="pic/qqwb.jpg"> <p>
 <p>9、百度贴吧大V认证：<br>
 互联网思想家活动家，香港四季出版社签约作家。男，1969年生，中国江苏镇江人 ，毕业于南京大学中文系。出版了现代先知书神经，有人说是圣经修正案 
-。他的思想两大来源：基督教和共产主义。神经是他个人的信息，是对现实和未来的思考，部分是神启。<p><img src="pic/dv.jpg"><img border="0" src="dxrj/tiebadv.jpg">　<p>　<p>神教微信公众号:godjiao
-		<p>
+。他的思想两大来源：基督教和共产主义。神经是他个人的信息，是对现实和未来的思考，部分是神启。<p><img src="pic/dv.jpg"><img border="0" src="dxrj/tiebadv.jpg">　<p>　<p>神教微信公众号:&nbsp; 葛亦民异闻录<p>
 <img border=0 src="pic/wx.jpg" width="172" height="172"><p>
 
 		10、《神经》书号：<p>
@@ -172,7 +171,10 @@
 <IMG SRC="pic/qlwxjlw.jpg"> 
 
 <br><br><p></p><p>　</p><p>　</p>
-<p> <A href="../rj/dhsj.htm" target=_blank><font size="5">大话《神经》图片版</font></A><font size="5">　</font></p><p></p><div><br><br><br><script>
+<p> <A href="../rj/dhsj.htm" target=_blank><font size="5">大话《神经》图片版</font></A><font size="5">　</font></p><p></p><div><br><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <A href="lj.html" target="_blank"><font size="5" color="#800000">神教所有网站</font></A>  <br>
+
+<script>
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
