--- a/xw2.html
+++ b/xw2.html
@@ -147,8 +147,29 @@
 
 
 		
-		<br><br><br><div><br><br><p>　</p><p>　</p>
-<p> <A href="../rj/dhsj.htm" target=_blank><font size="5">大话《神经》图片版</font></A><font size="5">　</font></p><br><script>
+		<br>9、原中央电视台新闻主播郎永淳接受葛亦民的两大<p>
+		<a  href="https://www.sohu.com/a/149523710_174098" target="_blank">
+		https://www.sohu.com/a/149523710_174098</a><p>
+		<img border=0 src="xwa/nyc.jpg" >
+
+
+		
+		　</p>
+		<p>
+		10<span lang="zh-cn">、中南财经政法大学接受葛亦民的两大</span></p>
+			<a  href="http://ygb.zuel.edu.cn/2018/1225/c167a207483/page.htm" target="_blank">
+		http://ygb.zuel.edu.cn/2018/1225/c167a207483/page.htm</a><p>
+		<img border=0 src="xwa/zncjzfdx1.jpg" >
+
+		<p>	<a  href="http://wellan.zuel.edu.cn/2019/1112/c1671a228211/pagem.htm?ivk_sa=1024320u" target="_blank">
+		http://wellan.zuel.edu.cn/2019/1112/c1671a228211/pagem.htm?ivk_sa=1024320u</a><p>
+		<img border=0 src="xwa/zncjzfdx2.jpg" >
+<strong></strong>
+		&nbsp;</p><p>　</p>
+<p> <A href="../rj/dhsj.htm" target=_blank><font size="5">大话《神经》图片版</font></A><font size="5">　</font></p><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <A href="lj.html" target="_blank"><font size="5" color="#800000">神教所有网站</font></A>  <br>
+
+<script>
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
