--- a/fygc/amazon.htm
+++ b/fygc/amazon.htm
@@ -52,7 +52,7 @@ https://www.amazon.com/dp/B09ZSX3BRC</a><br>
 电子书$1.99<br>
 打印长度‏ : ‎ 2088页<br>
 
-<img border="0" src="../pic/wordofgod.jpg">
+<img border="0" src="../pic/wordofgod.jpg" width="513" height="813">
 <br>
 二、神经繁体版：<br>
 <a target="_blank" href="https://www.amazon.com/dp/B09ZRJNX4M">
@@ -74,7 +74,7 @@ https://www.amazon.com/dp/B0B2MJLZ78</a><br>
 电子书$0.99<br>
 打印长度‏ : ‎ 789页<br>
 
-<img border="0" src="../pic/anecdote of geyimin.jpg">
+<img border="0" src="../pic/anecdote of geyimin.jpg" width="513" height="769">
 
 <br>
 四、葛神异闻录繁体版：<br>
@@ -83,7 +83,7 @@ https://www.amazon.com/dp/B0B2WFDDNT</a><br>
 电子书$0.99<br>
 打印长度‏ : ‎ 516页<br>
 
-<img border="0" src="../pic/gsywl.jpg">
+<img border="0" src="../pic/gsywl.jpg" width="513" height="812">
 
 &nbsp;</p>
 <p>&nbsp;</p>
