--- a/fygc/gymfk.htm
+++ b/fygc/gymfk.htm
@@ -1,4 +1,4 @@
-<html>
+<html xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
 
 <head>
 <meta http-equiv="Content-Language" content="zh-cn">
@@ -27,7 +27,12 @@ QQ：50914333</font><br>
 
 <br>
 <span style="color: rgb(0, 0, 0); font-family: &quot;Microsoft YaHei&quot;; font-size: medium; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">
-汇款账号：邮政卡号 6221883140001998345 葛亦民 开户行：江苏镇江市梦溪路支行</span><p>
+汇款账号：邮政卡号 6221883140001998345 葛亦民 开户行：江苏镇江市梦溪路支行<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 工商银行卡号 
+6212261104001895704 葛亦民 开户行：江苏镇江南大街支行<br>
+<br>
+<span style="font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; white-space: nowrap; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+paypal：</span><span style="color: rgb(44, 46, 47); font-family: PayPal-Sans, sans-serif; font-size: 15px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: 0.375px; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; white-space: nowrap; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">50914333@qq.com</span></span><p>
 <p>　</p>
 <p>
 <IMG SRC="../pic/zfbgeyimin.jpg" alt="beautiful lady" align="left" border=0 width="400" height="600"> 
