--- a/gzly/zp.htm
+++ b/gzly/zp.htm
@@ -22,7 +22,7 @@
 <p><img border="0" src="bzz.png" width="239" height="219">
 <img border="0" src="d.png" width="150" height="150"><img border="0" src="gd.png" width="150" height="150">
 <img border="0" src="s.png" width="150" height="150"><img border="0" src="h.png" width="150" height="150"><img border="0" src="bzz.png" width="150" height="150"><img border="0" src="hong.png" width="150" height="150"><img border="0" src="zuo.jpg" width="150" height="150"><img border="0" src="zhan.jpg" width="150" height="150"><img border="0" src="g1.png" >
-<img border="0" src="../rj/1981x.png" ><img border="0" src="gz2.png" ><img border="0" src="sm.png" >圣母　<img border="0" src="cz.jpg" >初中<img border="0" src="gz.jpg">高中<img border="0" src="dx.jpg" >大学
+<img border="0" src="../rj/1981x.png" ><img border="0" src="gz2.png" ><img border="0" src="sm.png" >圣母<img border="0" src="hcf.jpg" >圣妻　<img border="0" src="cz.jpg" >初中<img border="0" src="gz.jpg">高中<img border="0" src="dx.jpg" >大学
 
 &nbsp;<img border="0" src="xx.gif" >休闲<img border="0" src="cf.jpg" >采访
 <p>　</p>
