--- a/nszz/gymsp.htm
+++ b/nszz/gymsp.htm
@@ -5,13 +5,36 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>葛亦民视频、赞美歌</title>
 <script src="Scripts/swfobject_modified.js" type="text/javascript"></script>
+<style type="text/css">
+.style1 {
+				font-size: medium;
+}
+.style2 {
+				font-size: large;
+				font-weight: bold;
+}
+.style4 {
+				font-size: small;
+}
+.style5 {
+				font-size: x-large;
+}
+.style6 {
+				font-size: x-large;
+				font-weight: bold;
+}
+</style>
 </head>
 
 <body>
 
 <p>&nbsp;<span lang="en-us">&nbsp;&nbsp; </span>&nbsp;</p>
-<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>
-<font size="6" color="#800080">一、神经直播视频<br></font></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="https://v.gegod.xyz/index.html"><span class="style2"> </span>
+<span class="style5"> blaze视频库</span></a><span class="style5">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span> <span lang="en-us"> <a href="http://v.20331126.xyz" target="_blank">
+<span class="style5">甲骨文视频库</span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>
+</p>
+<p><font size="6" color="#800080">一、神经直播视频<br></font></p>
 
 <p><span lang="en-us">&nbsp; &nbsp;&nbsp; &nbsp; </span><a target="_blank" a href="http://www.gegod.com/movie/sj1.mp4">神经第一章异像书</a>
 
@@ -135,7 +158,9 @@
 </span><a target="_blank" a href="http://www.gegod.com/movie/p/xj.mp4">葛亦民虚假消息</a><span lang="en-us">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
 </span>&nbsp;&nbsp;
 <a target="_blank" a href="http://www.gegod.com/movie/p/2020.mp4">葛亦民2020</a>&nbsp;<span lang="en-us">&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;
-</span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/hy/hy.mp4">好运莲莲葛神</a>&nbsp;<p>
+</span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/hy/hy.mp4">好运莲莲葛神</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank" a href="../pic/sjdouyin.mp4">
+&nbsp;<span class="style1">十句神经真言抖音</span></a>
+<p>
 
 <font size="4" color="#800080">&nbsp;&nbsp;&nbsp;<span lang="en-us">&nbsp;
 </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/p/jsz.mp4">救世主葛亦民hevc</a>&nbsp;&nbsp;<span lang="en-us">&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
@@ -147,24 +172,48 @@
 &nbsp;&nbsp;
 </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/p/wh.mp4">正在准备维护网站的屑神.gym</a>&nbsp;<span lang="en-us">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;
 </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/p/god.mp4">屑神下凡.gym</a>&nbsp;<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span><a target="_blank" a href="http://www.gegod.com/movie/p/aoyun.mp4">我的夺冠时刻</a>&nbsp;<p>
+</span><a target="_blank" a href="http://www.gegod.com/movie/p/aoyun.mp4">我的夺冠时刻</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/p/ywyd.mp4">葛亦民神一问一答</a>&nbsp;<p>
 
 　<p>
 
-<font size="6" color="#800080">&nbsp;&nbsp; 四、 </font></span><font size="5" color="#800080">
-	<a target="_blank" a href="https://pan.baidu.com/s/1bMJMpIfm037EwBUtQBGexg?pwd=mcvf ">百度网盘葛亦民视频、直播神经视频集</a></font>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;
+<font size="6" color="#800080">&nbsp; &nbsp; 四、 神经经文视频</font><p>
 
-<a target="_blank" a href="../dxrj/sjsp.htm">百度网盘神经经文视频</a><span lang="en-us">&nbsp;&nbsp;&nbsp; </span><p><font size="5" color="#800080">&nbsp; </font>
-<font size="6" color="#800080">&nbsp;</font>
-<a target="_blank" a href="http://v.youku.com/v_show/id_XNjQyODY0NzA0.html">【葛亦民幸福的小家庭】 </a>&nbsp;&nbsp;
-<a target="_blank" a href="http://v.youku.com/v_show/id_XNjQyNDYzMTY4.html">【葛亦民大婚（上）】</a>
+&nbsp;<p>
+
+<font size="4" color="#800080">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/hy/1.mp4">神经第1集</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/hy/2.mp4">神经第2集</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/hy/3.mp4">神经第3集</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/hy/4.mp4">神经第4集</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/hy/5.mp4">神经第5集</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/hy/6.mp4">神经第6集</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/hy/7.mp4">神经第7集</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/hy/8.mp4">神经第8集</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/hy/9.mp4">神经第9集</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/hy/10.mp4">神经第10集</a>&nbsp;
+</font>
+<p>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/hy/11.mp4">神经第11集</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/hy/12.mp4">神经第12集</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/hy/13.mp4">神经第13集</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/hy/14.mp4">神经第14集</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/hy/15.mp4">神经第15集</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/hy/16.mp4">神经第16集</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/hy/17.mp4">神经第17集</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/hy/18.mp4">神经第18集</a>&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/hy/19.mp4">神经第19集</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/hy/20.mp4">神经第20集</a>&nbsp;
+<p>
+
+&nbsp;<p>
+
+<font size="5" color="#800080">&nbsp;&nbsp;<font size="6" color="#800080">&nbsp;&nbsp;五、 </font>
+	
+
+<a target="_blank" a href="../dxrj/sjsp.htm"><span class="style1">百度网盘神经经文视频</span></a><span class="style1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><font color="#800080"><span class="style1"> &nbsp;</span></font><span class="style1"> 
+优酷：<a target="_blank" a href="http://v.youku.com/v_show/id_XNjQyODY0NzA0.html">葛亦民幸福的小家庭 </a>&nbsp;&nbsp;
+<a target="_blank" a href="http://v.youku.com/v_show/id_XNjQyNDYzMTY4.html">葛亦民大婚（上）</a>
 &nbsp;&nbsp;
-<a target="_blank" a href="http://v.youku.com/v_show/id_XNjQyNzc3OTk2.html">【葛亦民大婚（下）】</a>&nbsp;&nbsp;&nbsp;
-<a target="_blank" a href="http://v.youku.com/v_show/id_XNjQyMjcxNjE2.html">【葛亦民与儿子】</a><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>
-<a target="_blank" a href="../pic/sjdouyin.mp4">【十句神经真言抖音】葛神2019</a>&nbsp;&nbsp;
+<a target="_blank" a href="http://v.youku.com/v_show/id_XNjQyNzc3OTk2.html">葛亦民大婚（下）</a>&nbsp;&nbsp;&nbsp;
+</span>
+<a target="_blank" a href="http://v.youku.com/v_show/id_XNjQyMjcxNjE2.html">
+<span class="style1">葛亦民与儿子</span></a><p>
 
-　</p>
-<font size="6" color="#800080">&nbsp;&nbsp; 五、</font></span>葛花演唱的葛亦民神赞美歌 </font></font></font></font><font size="6" color="#800080">音频</font><font size="4" color="#800080"><br>
+&nbsp;&nbsp;&nbsp;&nbsp;
+
+<p>
+
+&nbsp;&nbsp;&nbsp; <font size="6" color="#800080"> 六、</font>葛花演唱的葛亦民神赞美歌 </font></font></font><font size="6" color="#800080">音频</font><font size="4" color="#800080"><br>
 <br>
 1、
 《镇江的金山上》<br>
@@ -207,9 +256,61 @@
 &nbsp;&nbsp;&nbsp;
 <font size="6" color="#800080">&nbsp;&nbsp; <br>
 <br>
-六、 <font size="5" color="#800080">
-	<a target="_blank" a href="http://www.gegod.com/video/">葛亦民官网视频库</a></font>
-&nbsp;&nbsp;&nbsp;<p>　</p>
+&nbsp; 七、 <font size="5" color="#800080">
+	&nbsp;<font size="6" color="#800080">神经直播老视频<br>
+<span class="style4">
+<br></span></font><span class="style4">&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/xjt/sjml.mp4">目录</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/xjt/sj1-1-5.mp4">异像书1-5</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a target="_blank" a href="http://www.gegod.com/movie/xjt/sj1-6-11.mp4">异像书6-11</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/xjt/sj1-12-16.mp4">异像书112-16</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+<a target="_blank" a href="http://www.gegod.com/movie/xjt/sj1-17-24.mp4">异像书17-24</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/xjt/sj1-25-33.mp4">异像书25-33</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+<a target="_blank" a href="http://www.gegod.com/movie/xjt/sj1-34-40.mp4">异像书34-40</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/xjt/sj1-41-45.mp4">异像书41-45</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+<a target="_blank" a href="http://www.gegod.com/movie/xjt/sj1-46-48.mp4">异像书46-48</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <a target="_blank" a href="http://www.gegod.com/movie/xjt/sj1-49-53.mp4">异像书49-53</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+<a target="_blank" a href="http://www.gegod.com/movie/xjt/sj1-54-57.mp4">异像书54-57</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/xjt/sj1-58-65.mp4">异像书58-65</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+<a target="_blank" a href="http://www.gegod.com/movie/xjt/sj1-65-69.mp4">异像书65-69</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/xjt/sj2.mp4">启示书</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+ <a target="_blank" a href="http://www.gegod.com/movie/xjt/sj3.mp4">神之书</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/xjt/sj4.mp4">爱之书</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+<a target="_blank" a href="http://www.gegod.com/movie/xjt/sj7.mp4">永生书</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/xjt/sj89.mp4">国度书政经书</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+<a target="_blank" a href="http://www.gegod.com/movie/xjt/sj10-1-30.mp4">基共宣言1-30</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 
+<a target="_blank" a href="http://www.gegod.com/movie/xjt/sj10-31-60.mp4">基共宣言31-60</a>&nbsp;&nbsp;&nbsp; &nbsp; <a target="_blank" a href="http://www.gegod.com/movie/xjt/sj10-61-90.mp4">基共宣言61-90</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+<a target="_blank" a href="http://www.gegod.com/movie/xjt/sj10-91-120.mp4">基共宣言91-120</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/xjt/sj10-121-165.mp4">基共宣言121-165</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+<a target="_blank" a href="http://www.gegod.com/movie/xjt/sj11-1-5.mp4">福音书1-5</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/xjt/sj11-6-15.mp4">福音书6-15</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+<a target="_blank" a href="http://www.gegod.com/movie/xjt/sj11-16-23.mp4">福音书16-23</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/xjt/sj11-24-35.mp4">福音书24-35</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; 
+<a target="_blank" a href="http://www.gegod.com/movie/xjt/sj11-36-45.mp4">福音书36-45</a>&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/xjt/sj11-46-50.mp4">福音书46-50</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+<a target="_blank" a href="http://www.gegod.com/movie/xjt/sj11-51-59.mp4">福音书51-59</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/xjt/sj11-60-63.mp4">福音书60-63</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+<a target="_blank" a href="http://www.gegod.com/movie/xjt/sj11-64-68.mp4">福音书64-68</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/xjt/sj11-69-74.mp4">福音书69-74</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+<a target="_blank" a href="http://www.gegod.com/movie/xjt/sj11-75-81.mp4">福音书75-81</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/xjt/sj11-82-91.mp4">福音书82-91</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+<a target="_blank" a href="http://www.gegod.com/movie/xjt/sj12-1-17.mp4">语录书1-17</a>&nbsp;&nbsp;<br>
+<br>
+&nbsp;&nbsp;<span lang="en-us">&nbsp; </span>&nbsp;&nbsp;&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/xjt/sj12-1-17.mp4">语录书1-17</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/xjt/sj12-18-48.mp4">语录书18-48</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/xjt/sj12-49-69.mp4">语录书49-69</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+<a target="_blank" a href="http://www.gegod.com/movie/xjt/sj12-70-90.mp4">语录书70-90</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/xjt/sj12-91-103.mp4">语录书91-103</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+<a target="_blank" a href="http://www.gegod.com/movie/xjt/sj12-104-111.mp4">语录书104-111</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/xjt/sj13.mp4">行传书</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span lang="en-us">&nbsp;&nbsp;
+</span>&nbsp; 
+ <a target="_blank" a href="http://www.gegod.com/movie/xjt/sj141516.mp4">葛亦民传新闻神证明</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>
+<br>
+&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; 
+ <a target="_blank" a href="http://www.gegod.com/movie/xjt/sj21sp.mp4">诗篇书</a></span><span class="style1"><span class="style4">&nbsp;
+&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/xjt/sj22rj.mp4">日记书</a>&nbsp;
+&nbsp;&nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/xjt/sj23sx.mp4">书信书</a>&nbsp;
+&nbsp;&nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/xjt/sj24jz.mp4">圣徒见证</a>&nbsp;
+&nbsp;&nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/xjt/sj25ghx.mp4">葛花训</a></span></span><span class="style4">&nbsp;
+
+&nbsp;&nbsp;&nbsp;
+
+<br>
+
+</span>
+<br>
+
+<br>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b><a target="_blank" a href="http://www.gegod.com/picture/">
+<span class="style5">神网图片库</span></a><span class="style5">&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;</span></b><a target="_blank" a href="https://v.gegod.xyz/index.html"><span class="style6"> blaze视频库</span></a></font><span class="style6">
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><b><span class="style6">
+</span> <a href="http://v.20331126.xyz" target="_blank"><span class="style6">甲骨文视频库</span></a></b>&nbsp;&nbsp;&nbsp;&nbsp;
 <script>
 var _hmt = _hmt || [];
 (function() {
@@ -221,7 +322,7 @@ var _hmt = _hmt || [];
 </script>
 <br><br>
 
-<p>　</p><p>
+
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- h -->
 <ins class="adsbygoogle"
