--- a/scsl/wx.html
+++ b/scsl/wx.html
@@ -2,25 +2,39 @@
 <head>
 <title> 微信公众号、QQ群</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<style type="text/css">
+.style1 {
+				font-size: large;
+				font-weight: bold;
+}
+</style>
 </head>
 
 <body bgcolor="#FFFFFF">
 <p>　</p>
 <p>
-<b style="color: rgb(0, 0, 0); font-family: &quot;Microsoft YaHei&quot;; font-size: large; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </b><span style="font-size: large; letter-spacing: normal"><b>微信公众号</b></span></p>
+<b style="color: rgb(0, 0, 0); font-family: &quot;Microsoft YaHei&quot;; font-size: large; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </b><span style="font-size: large; letter-spacing: normal"><b>&nbsp;&nbsp; 一、微信公众号</b></span></p>
 <p>　</p>
 
- 微信公众号：葛亦民异闻录 
-<IMG SRC="../pic/wx.jpg">
+ 2个微信公众号：<span class="style1">geyimin2033    <b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; xyz20331126&nbsp;<br>
+<br>
+&nbsp;
+		</b>
+
+</span>
+<IMG SRC="../pic/wx.jpg"> <br>
+<br>
+<br>
+<span class="style1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+二、QQ群</span><p>　</p>
+
+
+
+
 
 <p>　</p>
-
-
-
-
-
-<p>　</p>
-<p>QQ群      695836804   葛亦民异闻录<IMG SRC="../pic/qqqun.jpg">
+<p>2个QQ群<span class="style1">      695836804&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;       686558572</span></p>
+<p>&nbsp;<IMG SRC="../pic/qqqun.jpg">
 </p>
 
 
