--- a/index.html
+++ b/index.html
@@ -374,8 +374,8 @@ var _hmt = _hmt || [];
 2、<a href="../gzly/163xw.jpg" target="_blank">和其他意大利或者西班牙的报纸一样，毕竟不是《耶梅经》，网易</a><br><br>
 
 3、<a href="../gzly/pcpopxw.jpg" target="_blank">恰巧验证了《耶梅经》中有关世界末日的预言，泡泡网</a><br>
-<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="style4"><strong>&nbsp;</strong></span><a target="_blank" a href="http://www.gegod.com/picture/"><span class="style4"><strong>图片库</strong></span></a>&nbsp;&nbsp;&nbsp;&nbsp;<span lang="zh-cn">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span>&nbsp;<b><a target="_blank" a href="https://v.gegod.xyz/index.html"><span class="style3">blaze视频库</span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </b>
+<br><br>&nbsp;&nbsp;&nbsp;<span class="style4"><strong>&nbsp;</strong></span><a target="_blank" a href="http://www.gegod.com/picture/"><span class="style4"><strong>图片库</strong></span></a>&nbsp;&nbsp;&nbsp;&nbsp;<span lang="zh-cn">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</span>&nbsp;<b><a target="_blank" a href="https://v.geyimin.top/index.html"><span class="style4">blaze视频库</span></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </b>
 </font>
 
 </span>
