--- a/lj.html
+++ b/lj.html
@@ -125,7 +125,7 @@
 
  <a target="_blank" href="http://t.gegod.com">github博客</a>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank"href="http://www.geyimin.gay">葛亦民同志</a><span class="style3">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
  <span lang="en-us"><a target="_blank" a href="http://www.gegod.com/picture/">神网图片库</a>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
-<b> <a href="https://v.gegod.xyz/index.html" target="_blank">blaze视频库</a></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<b> <a href="https://v.geyimin.top/index.html" target="_blank">blaze视频库</a></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <b> <a href="http://v.20331126.xyz" target="_blank">甲骨文视频库</a></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
  </span></font>
  <span lang="en-us">
